[gd_scene load_steps=2 format=3 uid="uid://byl3j7uw5xjd8"]

[ext_resource type="Script" path="res://scripts/audio_effect_verifier.gd" id="1"]

[node name="AudioEffectVerifier" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Audio Effect Property Verifier"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EffectTypeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/EffectTypeContainer"]
layout_mode = 2
text = "Effect Type:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/EffectTypeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VerifyButton" type="Button" parent="VBoxContainer/EffectTypeContainer"]
layout_mode = 2
text = "Verify Properties"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputText" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[b]Select an effect type and click Verify Properties to see available properties[/b]"